# ai-companion-image-backend

./: main.py  pyproject.toml
src/ai_companion_image_backend/: base_handlers.py
src/ai_companion_image_backend/provider/: openai.py
src/ai_companion_image_backend/provider/comfyui/: __init__.py
src/ai_companion_image_backend/provider/comfyui/comfy_api/: __init__.py
src/ai_companion_image_backend/provider/comfyui/comfyui_tasks/: __init__.py  comfyui_img2img_pipeline.py  comfyui_inpaint_pipeline.py  comfyui_txt2img_pipeline.py
src/ai_companion_image_backend/provider/comfyui/comfyui_workflows/: __init__.py  image2video_wan.json  img2img.json  img2img_clip_skip.json  img2img_sdxl.json  img2img_sdxl_clip_skip.json  img2img_sdxl_with_refiner.json  img2img_sdxl_with_refiner_clip_skip.json  inpaint.json  inpaint_clip_skip.json  inpaint_sdxl.json  inpaint_sdxl_clip_skip.json  inpaint_sdxl_with_refiner.json  inpaint_sdxl_with_refiner_clip_skip.json  sdxl-test-with-refiner.json  txt2img.json  txt2imgControl.json  txt2img_clip_skip.json  txt2img_sdxl.json  txt2img_sdxl_clip_skip.json  txt2img_sdxl_with_refiner.json  txt2img_sdxl_with_refiner_clip_skip.json  txt2img_with_vae.json
src/comfyui_client/: __init__.py  comfy_api.py  comfy_get_dir.py
